# single-wasm-rust-pdfium-qpdf

./: .gitignore  BUILD_DIAGRAM.md  BUILD_SUMMARY.md  BUILD_SYSTEM_FLOWCHART.md  CMakeLists.txt  Cargo.toml  DEBUGGING.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  build-wasm.sh  build-web.sh  build.rs  prepare-assets.sh  serve-web.sh  serve.py
.cargo/: config.toml
assets/: README.md
assets/include/: fpdfview.h  ipdf_qpdf.h  ipdf_qpdf_streaming.h  ipdf_streamingio.h
assets/include/qpdf/: qpdf-config.h
docs/: ARCHITECTURE.md  LINKING.md  README.md
examples/: basic_usage.rs
pkg/: auto_pqdfium_rs.d.ts  auto_pqdfium_rs.js  auto_pqdfium_rs.wasm  auto_pqdfium_rs_bg.wasm  auto_pqdfium_rs_bg.wasm.d.ts
src/: bridge.cpp  bridge.h  error.rs  lib.rs  stub.cpp
tests/: integration_test.rs
web/: README.md  TROUBLESHOOTING.md  auto_pqdfium_rs.js  auto_pqdfium_rs.wasm  index.html  pdfium-wasm.js  pdfium-wrapper.js  server.py  test.html
