[package]
name = "auto-pqdfium-rs"
version = "0.1.0"
edition = "2021"
authors = ["Akash"]
description = "Rust wrapper for PDFium + QPDF using autocxx"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
autocxx = "0.27"
cxx = "1.0"
thiserror = "1.0"

# WebAssembly support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[build-dependencies]
autocxx-build = "0.27"
cc = "1.0"
cmake = "0.1"

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
