[package]
name = "auto-pqdfium-rs"
version = "0.1.0"
edition = "2021"
authors = ["Akash"]
description = "Rust wrapper for PDFium + QPDF using autocxx"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = "z"  # Optimize for size (important for WASM)
lto = true
codegen-units = 1
strip = true
# Note: panic = "abort" removed for wasm32-unknown-emscripten compatibility

[profile.release.package."*"]
opt-level = 3
